install_data([
              'netjail'/'netjail_core.sh',
              'netjail'/'netjail_exec.sh',
              'netjail'/'netjail_start.sh',
              'netjail'/'netjail_stop.sh',
              'netjail'/'topo.sh',
              ],
              install_dir: get_option('datadir')/'gnunet')

install_data('xdg-scheme-handler'/'gnunet-uri.desktop',
             install_dir: get_option('datadir')/'applications')

