if gnunet_monolith == true
  gnunet_src = []
endif

subdir('include')
subdir('util')
subdir('nt')
subdir('hello')
subdir('block')
subdir('arm')
subdir('statistics')
#$(TESTING)')
if json_dep.found()
 subdir('json')
endif
if curl_dep.found()
  subdir('curl')
endif
subdir('rest')
subdir('peerinfo')
if sqlite_dep.found()
  subdir('sq')
endif
#subdir('$(MYSQL_DIR)')
#subdir('$(POSTGRES_DIR)')
subdir('datacache')
subdir('datastore')
#subdir('template')
subdir('peerstore')
subdir('ats')
subdir('nat')
subdir('nat-auto')
subdir('fragmentation')
subdir('transport')
#subdir('ats-tool')
subdir('core')
##subdir('$(TESTBED)')
subdir('nse')
subdir('dhtu')
subdir('dht')
#subdir('hostlist')
#subdir('topology')
#subdir('regex')
#subdir('dns')
#subdir('identity')
#subdir('gnsrecord')
#subdir('namecache')
#subdir('namestore')
#subdir('peerinfo-tool')
#subdir('cadet')
#subdir('set')
#subdir('seti')
#subdir('setu')
#subdir('consensus')
#subdir('scalarproduct')
#subdir('revocation')
#subdir('vpn')
#subdir('gns')
#subdir('zonemaster')
##subdir('$(CONVERSATION_DIR)')
#subdir('fs')
#subdir('exit')
#subdir('pt')
#subdir('secretsharing')
#subdir('reclaim')
#subdir('messenger')
##subdir('$(EXP_DIR)')
#subdir('integration-tests')

if gnunet_monolith == true
  libgnunet = library('gnunet',
                      gnunet_src,
                      dependencies: gnunetdeps,
                      include_directories: [incdir, configuration_inc])
endif
