subdir('util')
subdir('arm')
subdir('statistics')
subdir('datastore')
subdir('nat')
subdir('nat-auto')
subdir('core')
subdir('nse')
subdir('dht')
subdir('identity')
subdir('namecache')
subdir('namestore')
subdir('cadet')
subdir('revocation')
subdir('vpn')
subdir('gns')
subdir('fs')
subdir('reclaim')
subdir('messenger')
